--- a/fastai2_nlp/fastai2_vnmese_lm.ipynb
+++ b/fastai2_nlp/fastai2_vnmese_lm.ipynb
@@ -59,6 +59,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/quantran/.fastai/data/viwiki/models\n"
+     ]
+    }
+   ],
+   "source": [
+    "mdl_path = path/'models'\n",
+    "print(mdl_path)\n",
+    "mdl_path.mkdir(exist_ok=True)\n",
+    "lm_fns = [f'vi_wt', f'vi_wt_vocab']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "heading_collapsed": true
@@ -1481,7 +1501,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## LM learner"
    ]
@@ -1489,7 +1511,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "learn = language_model_learner(dls, \n",
@@ -1503,7 +1527,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1525,7 +1551,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1545,7 +1573,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1565,7 +1595,9 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1611,7 +1643,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "learn.unfreeze() # == learn.opt.freeze_to(-1)"
@@ -1620,7 +1654,9 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1640,7 +1676,9 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1661,6 +1699,7 @@
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1691,7 +1730,9 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1712,7 +1753,9 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1735,7 +1778,9 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1758,7 +1803,9 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1781,7 +1828,9 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1801,7 +1850,9 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1830,7 +1881,9 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1850,7 +1903,9 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1879,7 +1934,9 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1908,7 +1965,9 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1928,7 +1987,9 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1948,14 +2009,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -2014,28 +2079,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/quantran/.fastai/data/viwiki/models\n"
-     ]
-    }
-   ],
-   "source": [
-    "mdl_path = path/'models'\n",
-    "print(mdl_path)\n",
-    "mdl_path.mkdir(exist_ok=True)\n",
-    "lm_fns = [f'vi_wt', f'vi_wt_vocab']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "learn.to_fp32().save(mdl_path/lm_fns[0], with_opt=False)"
@@ -2044,7 +2091,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "if os.path.isfile(mdl_path/(lm_fns[1] + '.pkl')):\n",
@@ -2055,7 +2104,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "with open(mdl_path/(lm_fns[1] + '.pkl'), 'wb') as f:\n",
@@ -2266,7 +2317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2276,7 +2327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2286,7 +2337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2373,7 +2424,7 @@
        "4    1.0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2385,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2472,7 +2523,7 @@
        "10980    NaN  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2483,7 +2534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2510,18 +2561,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>xxbos xxmaj rao kính cận nhận được miếng mica lắp vào mắt đeo nhưng không đeo . xxmaj lần sau đề nghị shop có sao nói vậy . xxmaj thanks . xxbos \" bạn cho mình hỏi , thực tế với những gì bạn dùng thì pin được bao lâu . nói thật là nghĩ đến pin aw là mình ko muốn dùng nhưng cứ hỏi đã vì dùng mà cứ phải</td>\n",
-       "      <td>xxmaj rao kính cận nhận được miếng mica lắp vào mắt đeo nhưng không đeo . xxmaj lần sau đề nghị shop có sao nói vậy . xxmaj thanks . xxbos \" bạn cho mình hỏi , thực tế với những gì bạn dùng thì pin được bao lâu . nói thật là nghĩ đến pin aw là mình ko muốn dùng nhưng cứ hỏi đã vì dùng mà cứ phải sạc</td>\n",
+       "      <td>xxbos đế giày còn nhiều lỗi 🙂 xxbos wifi cũng yếu như thường xxbos xxmaj sách đẹp giao hàng nhanh chóng . xxmaj nội dung bình thường không thực sự hấp dẫn . xxbos xxmaj chất lượng sản phẩm tuyệt vời đóng gói sản phẩm rất đẹp và chắc chắn xxmaj shop phục vụ rất tốt xxmaj rất đáng tiền xxmaj thời gian giao hàng rất xxunk shop ạ xxrep 3 😍</td>\n",
+       "      <td>đế giày còn nhiều lỗi 🙂 xxbos wifi cũng yếu như thường xxbos xxmaj sách đẹp giao hàng nhanh chóng . xxmaj nội dung bình thường không thực sự hấp dẫn . xxbos xxmaj chất lượng sản phẩm tuyệt vời đóng gói sản phẩm rất đẹp và chắc chắn xxmaj shop phục vụ rất tốt xxmaj rất đáng tiền xxmaj thời gian giao hàng rất xxunk shop ạ xxrep 3 😍 xxbos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>mừng xxbos xxmaj chất lượng sản phẩm rất kém bé bị hăm đóng lần dầu da bi đo hết lên xxbos đóng gói sp rất đẹp . xxmaj giao hàng nhanh . xxmaj nhưng sạc ko sử dụng được cắm sạc cho pin sạc thì vào điện nhưng pin ko sạc cho điện thoại được . đang chờ xxmaj shop giải quyết cho mình . xxbos xxmaj sản phẩm rất ok giao</td>\n",
-       "      <td>xxbos xxmaj chất lượng sản phẩm rất kém bé bị hăm đóng lần dầu da bi đo hết lên xxbos đóng gói sp rất đẹp . xxmaj giao hàng nhanh . xxmaj nhưng sạc ko sử dụng được cắm sạc cho pin sạc thì vào điện nhưng pin ko sạc cho điện thoại được . đang chờ xxmaj shop giải quyết cho mình . xxbos xxmaj sản phẩm rất ok giao hàng</td>\n",
+       "      <td>vời 1 lời đó thôi đáng xxmaj tiền xxbos xxmaj dùng tốt \\n xxmaj tốc độ cao \\n xxmaj giữ ổ cứng chắc chắn xxbos m tưởng nhựa cứng hoá ra mềm xxunk ak xxbos giong mau nhung mau troi hon 3ce kem xxbos xxmaj chất lượng sản phẩm rất kém . xxmaj lấy loại có vỏ lại ship hàng ko vỏ . xxmaj ko đúng màu . xxbos xxmaj giao xxunk</td>\n",
+       "      <td>1 lời đó thôi đáng xxmaj tiền xxbos xxmaj dùng tốt \\n xxmaj tốc độ cao \\n xxmaj giữ ổ cứng chắc chắn xxbos m tưởng nhựa cứng hoá ra mềm xxunk ak xxbos giong mau nhung mau troi hon 3ce kem xxbos xxmaj chất lượng sản phẩm rất kém . xxmaj lấy loại có vỏ lại ship hàng ko vỏ . xxmaj ko đúng màu . xxbos xxmaj giao xxunk quá</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>. xxmaj cái thừa cái thiếu . xxmaj nt thì còn tỏ thái độ bảo do khách nữa . xxup bó tay . ốp thì cứng . xxmaj bậy cả cường lực lên xxbos đặt 1 đường giao một nẻo xxbos đặt 2 nhưng shop gữi 3 😘 😘 xxbos đóng gói kĩ càng hàng tốt xxbos xxmaj sách này mua để tặng người bạn . xxmaj khi nhận hàng không kiểm</td>\n",
-       "      <td>xxmaj cái thừa cái thiếu . xxmaj nt thì còn tỏ thái độ bảo do khách nữa . xxup bó tay . ốp thì cứng . xxmaj bậy cả cường lực lên xxbos đặt 1 đường giao một nẻo xxbos đặt 2 nhưng shop gữi 3 😘 😘 xxbos đóng gói kĩ càng hàng tốt xxbos xxmaj sách này mua để tặng người bạn . xxmaj khi nhận hàng không kiểm tra</td>\n",
+       "      <td>tuyệt vời đóng gói sản phẩm rất đẹp và chắc chắn xxmaj shop phục vụ rất tốt xxmaj thời gian giao hàng rất nhanh xxbos xxmaj giao hàng siêu nhanh . đóng gói kỹ . xxmaj lần nào mua cũng ưng ý hết . xxbos xxmaj shop rất nhiệt tình và giao hàng nhanh cũng nhanh nữa . xxmaj em thích lắm . đóng gói sản phẩm rất đẹp và chắc chắn</td>\n",
+       "      <td>vời đóng gói sản phẩm rất đẹp và chắc chắn xxmaj shop phục vụ rất tốt xxmaj thời gian giao hàng rất nhanh xxbos xxmaj giao hàng siêu nhanh . đóng gói kỹ . xxmaj lần nào mua cũng ưng ý hết . xxbos xxmaj shop rất nhiệt tình và giao hàng nhanh cũng nhanh nữa . xxmaj em thích lắm . đóng gói sản phẩm rất đẹp và chắc chắn .</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -2544,7 +2595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2553,7 +2604,7 @@
        "['vi_wt', 'vi_wt_vocab']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2564,7 +2615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2578,7 +2629,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bs=64\n",
+    "# bs=24\n",
+    "bs=128"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2588,7 +2650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -2599,7 +2661,7 @@
        "5128"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2610,7 +2672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2647,7 +2709,7 @@
        ")"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2658,7 +2720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2677,7 +2739,7 @@
        "       device='cuda:0', requires_grad=True)]]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2685,16 +2747,6 @@
    "source": [
     "learn_sen.opt.param_lists[-1:] # note that last linear layer requires_grad is True\n",
     "# equivalent to learn_sen.freeze() aka freeze_to(-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: save params copy for each params in paramlist, including embedding.\n",
-    "# and check if they are updated, especially the embedding"
    ]
   },
   {
@@ -2761,10 +2813,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(learn_sen.model.parameters()))"
+   ]
   },
   {
    "cell_type": "code",
@@ -2792,7 +2857,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: what is state_dict? is it native or fastai code"
+    "# TODO: different b/t state_dict() and parameters()\n",
+    "# save word embeddings and check if they are upgraded (whether freeze or unfreeze)\n",
+    "# check if freeze() actually work by comparing weights"
    ]
   },
   {
@@ -2973,8 +3040,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: prepare for backward lm + sent classification"
+    "TODO: prepare for backward lm + sent classification\n",
+    "\n",
+    "Check how word embedding and hidden state are loaded to sentiment model"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
