--- a/fastai2_nlp/fastai2_vnmese_lm.ipynb
+++ b/fastai2_nlp/fastai2_vnmese_lm.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -772,6 +772,77 @@
    "source": [
     "type(dls.train) #inherit TfmdDL"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "check bptt (seq_len) size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "temp_i = iter(dls.train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([128, 72]) torch.Size([128, 72])\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp_x,temp_y = next(temp_i)\n",
+    "print(temp_x.shape,temp_y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([128, 72]) torch.Size([128, 72])\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp_x,temp_y = next(temp_i)\n",
+    "print(temp_x.shape,temp_y.shape)\n",
+    "# bptt not changing during LM model.\n",
+    "# though there might be a param somewhere to set up variable bptt length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1480,14 +1551,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## LM learner"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### define learner"
    ]
@@ -1495,7 +1570,9 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "learn = language_model_learner(dls, \n",
@@ -1509,7 +1586,9 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1531,7 +1610,9 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1551,7 +1632,9 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1571,7 +1654,9 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1617,7 +1702,9 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "learn.unfreeze() # == learn.opt.freeze_to(0)"
@@ -1626,7 +1713,9 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1646,7 +1735,9 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1680,7 +1771,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "hidden": true
    },
    "source": [
     "### Param groups and weight shapes"
@@ -2130,7 +2221,37 @@
     }
    ],
    "source": [
-    "temp.weight_hh_l0.shape, temp.weight_ih_l0.shape # where the 4608 come from though..."
+    "temp.weight_hh_l0.shape, temp.weight_ih_l0.shape \n",
+    "\n",
+    "# ~LSTM.weight_ih_l[k] – the learnable input-hidden weights of the \\text{k}^{th}k \n",
+    "# th\n",
+    "#   layer (W_ii|W_if|W_ig|W_io), of shape (4*hidden_size, input_size) for k = 0. Otherwise, the shape is (4*hidden_size, num_directions * hidden_size)\n",
+    "\n",
+    "# ~LSTM.weight_hh_l[k] – the learnable hidden-hidden weights of the \\text{k}^{th}k \n",
+    "# th\n",
+    "#   layer (W_hi|W_hf|W_hg|W_ho), of shape (4*hidden_size, hidden_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4608"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4*1152"
    ]
   },
   {
@@ -2217,7 +2338,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### quick review on slice"
@@ -2385,7 +2507,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Start training"
@@ -2502,7 +2625,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Re-check learnable parameters"
@@ -2573,7 +2697,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Save model"
@@ -2619,7 +2744,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### try drop_mult 0.5"
@@ -2741,7 +2867,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### try original wikitext param training"
@@ -3597,7 +3724,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## prepare text clas datablock and dataloaders"
    ]
@@ -3605,7 +3734,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# bs=64\n",
@@ -3616,7 +3747,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "train_df = pd.read_csv('train.csv')"
@@ -3625,7 +3758,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "train_df.loc[pd.isna(train_df.comment),'comment']='NA'"
@@ -3634,7 +3769,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -3732,7 +3869,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -3754,7 +3893,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "sen_db = DataBlock(blocks=(TextBlock.from_df('comment', seq_len=72, vocab=dls_sen.vocab), CategoryBlock),\n",
@@ -3767,6 +3908,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -3918,7 +4060,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -3938,7 +4082,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -3958,7 +4104,9 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -3982,7 +4130,9 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -4028,7 +4178,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## study dataloaders and tfms"
    ]
@@ -4036,7 +4188,9 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -4065,7 +4219,9 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -4085,7 +4241,9 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "temp_i = iter(dls_clas.train)"
@@ -4094,7 +4252,9 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "x,y = next(temp_i)"
@@ -4103,7 +4263,9 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -4123,7 +4285,9 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -4148,7 +4312,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Note: how padding works: https://dev.fast.ai/text.data#Classification"
    ]
@@ -4156,7 +4322,9 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -4176,7 +4344,9 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -4196,7 +4366,9 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -4218,6 +4390,7 @@
    "cell_type": "code",
    "execution_count": 198,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -4248,7 +4421,9 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -4268,7 +4443,9 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
