more attention note. New nb for cnn

--- a/stanford-languagemodel-machinetranslation-attention.ipynb
+++ b/stanford-languagemodel-machinetranslation-attention.ipynb
@@ -476,6 +476,37 @@
     "\n",
     "https://youtu.be/XXtpJxZBa2c?t=4273"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/translation_21.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/translation_22.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explaning the previous img\n",
+    "\n",
+    "- The query determines which values to focus on and HOW MUCH it is going to select from the values, which results in the weighted sum (weighted sum = sum(Wi * Xi) with W is the weights and X is the values)\n",
+    "- Attention will turn an artibtary set of representations (like 100 values, 1000 values ...) into 1 single fixed-sized representation which summarizes them (1 single vector after the weighted sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/translation_23.png)"
+   ]
   }
  ],
  "metadata": {
