done with qrnn, add subword model note

--- a/stanford_qa_cnn_archcomparison_qrnn.ipynb
+++ b/stanford_qa_cnn_archcomparison_qrnn.ipynb
@@ -87,27 +87,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## steps and padding"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "![](images/cnn_1.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "You can add padding 1 (start word and end word with embedding 0s) to maintain number of outputs (# of rows) and add more filters (2 more) to increase dimension of output matrix (# of columns)\n",
     "\n",
@@ -116,9 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "![](images/cnn_2.png)"
    ]
@@ -154,10 +146,15 @@
    "source": [
     "So if the first 2 features is \"polite\" and \"food\", then this whole text is not polite (0.3 politeness) but is talking about food (1.6 food)\n",
     "\n",
-    "You can also do an **average pooling** to show \"what is the average amount of politeness in this text\"\n",
-    "\n",
-    "Sometimes **max pooling** is better, because of the nature of natural language:\n",
-    "- signals in language are often sparse (you will express politeness in some words, not every word)\n"
+    "You can also do an **average pooling** to show \"what is the average amount of politeness in this text\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Imporant**: Sometimes **max pooling** is better, because of the nature of natural language:\n",
+    "- signals in language are often sparse (you will express politeness in some words, not every word)"
    ]
   },
   {
@@ -221,7 +218,7 @@
     "- Also he used 'multi channel input' idea of\n",
     "    - Initialize with pre-trained word vectors (word2vec or Glove)\n",
     "    - **Start with two copies**\n",
-    "    - **Backprop into only one set, keep other “static”** => keep both the original version and the updated version, in which the idea is somewhat to **skip connection** (in skip connection to add the original and the output)\n",
+    "    - **Backprop into only one set, keep other “static”** => keep both the original version and the updated version, in which the idea is somewhat similar to **skip connection** (in skip connection you add the original and the processed output)\n",
     "    - Both channel sets are added to ci before max-pooling"
    ]
   },
@@ -323,6 +320,31 @@
    "metadata": {},
    "source": [
     "https://youtu.be/EAJoRA0KX7I?t=4679"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "QRNN addresses some of the problems CNNs and RNNs have; \n",
+    "- convolutions being time invariance and \n",
+    "- LSTMs being non-parallelized. \n",
+    "\n",
+    "We can say that QRNN combines best of two worlds: parallel nature of convolutions and time dependencies of LSTMs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/cnn_11.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/cnn_12.png)"
    ]
   }
  ],
